mejora del informe

--- a/Spotify_sage.ipynb
+++ b/Spotify_sage.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "USER_DIR = 'C:/Users/abram/Documents/MATI/TrabajoDeCurso/Spotify/api'\n",
-    "#USER_DIR = 'C:/Users/jcalc/Desktop/MATI/v2'"
+    "USER_DIR = 'C:/Users/abram/Documents/MATI/TrabajoDeCurso/Spotify/api'"
    ]
   },
   {
@@ -54,7 +53,7 @@
     "def anadeVertices(G, a): #añade vertices al grafo en funcion de la lista de reproduccion\n",
     "    G.add_vertices(a)\n",
     "    return G\n",
-    "def anadeArista(G, a, z):\n",
+    "def anadeArista(G, a, z): #añade aristas al grafo en funcion de los artistas\n",
     "    for i in range(0,len(a)):\n",
     "        if(i==len(a)-1):\n",
     "            G.add_edge(a[-1],a[0],z)\n",
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +140,6 @@
     }
    ],
    "source": [
-    "import operator\n",
     "for i in range(0,len(dataArtists)):\n",
     "    generos=[]\n",
     "    a = dataArtists[i]\n",
@@ -161,7 +159,7 @@
     "    \n",
     "    genres={k: v for k, v in sorted(genres.items(), key=lambda item: item[1])} #sort dict\n",
     "    print(genres,\"\\n\")\n",
-    "    print(\"El genero  es\",list(genres)[-1])\n",
+    "    print(\"El genero mas popular es\",list(genres)[-1])\n",
     "    print('-------------------------------')"
    ]
   },
@@ -258,17 +256,15 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "x=G.centrality_betweenness()\n",
-    "sorted_x = sorted(x.items(), key=operator.itemgetter(1))\n",
-    "print(list(sorted_x)[55:-1])\n",
-    "\n",
     "#La centralidad de intermediacion nos permite detectar \n",
     "#aquellos nodos que hacen de puente para otros nodos de tal forma que el camino se hace mas corto.\n",
     "#En este grafo tras aplicar la centralidad de intermediacion y coger los valores mas altos \n",
     "#podemos observar que los mas importantes son Young Buck y 50 cent, \n",
-    "#curioso ya que 50 cent esta en todas las playlists."
+    "#curioso ya que 50 cent esta en todas las playlists.\n",
+    "\n",
+    "x=G.centrality_betweenness()\n",
+    "sorted_x = sorted(x.items(), key=operator.itemgetter(1))\n",
+    "print(list(sorted_x)[55:-1])"
    ]
   },
   {
@@ -285,11 +281,10 @@
     }
    ],
    "source": [
+    "#Practicamente coincide con el centro del grafo\n",
     "x=G.centrality_closeness()\n",
     "sorted_x = sorted(x.items(), key=operator.itemgetter(1))\n",
-    "print(list(sorted_x)[55:-1])\n",
-    "\n",
-    "#Practicamente coincide con el centro del grafo"
+    "print(list(sorted_x)[55:-1])"
    ]
   },
   {
@@ -309,10 +304,7 @@
     "x=G.centrality_degree()\n",
     "#print(x)\n",
     "sorted_x = sorted(x.items(), key=operator.itemgetter(1))\n",
-    "print(list(sorted_x)[50:-1])\n",
-    "\n",
-    "#Lo sorpredente de esta centralidad de grado es que a pesar de que 50cent es nuestro \n",
-    "#autor de estudio Mobb Deep tiene la misma centralidad de grado"
+    "print(list(sorted_x)[50:-1])"
    ]
   },
   {
@@ -320,7 +312,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Lo sorpredente de esta centralidad de grado es que a pesar de que 50cent es nuestro \n",
+    "#autor de estudio Mobb Deep tiene la misma centralidad de grado"
+   ]
   },
   {
    "cell_type": "code",
@@ -452,7 +447,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Aplicando los conocimientos de la practica 7 de la asignatura sobre comunidades \n",
+    "# podemos encontrar las siguienes 8 comunidades del grafo:\n",
+    "[\n",
+    "['Trey Songz'], \n",
+    "['Nate Dogg', 'Kidd Kidd', 'The Madd Rapper', '2 Chainz', 'T.I.'], \n",
+    "['50 Cent', 'Mobb Deep'], \n",
+    "['Dr. Dre', 'Tony Yayo', 'G-Unit', 'Nicki Minaj', 'Yo Gotti', 'Daz Dillinger', 'Jadakiss', 'Jeezy', 'Kendrick Lamar'], \n",
+    "['Young Buck', 'Jeremih', 'The Game'], \n",
+    "['Eminem', 'Lloyd Banks', 'Justin Timberlake', '2Pac', 'Ca$his'], \n",
+    "['DMX', 'Nas', 'Michael Jackson', 'Ciara', 'Freeway', 'LL Cool J', 'Pharrell Williams', 'Timbaland', \n",
+    " 'Akon', 'Ne-Yo', 'Mase', 'Olivia', 'Missy Elliott', 'Pusha T', 'Nicole Scherzinger', 'LoveRance', 'M.O.P.', \n",
+    " 'Soulja Boy', 'Mary J. Blige', 'Onyx', 'Styles P', 'Black Rob', 'Eric B. & Rakim', 'Wu-Tang Clan', 'JAY-Z', \n",
+    " 'New Edition', 'The LOX', 'The Notorious B.I.G.', 'Dramacydal', \"Lil' Kim\", 'Joe', 'Mr. Probz'], \n",
+    "['Snoop Dogg', 'Alicia Keys', 'Adam Levine', 'Too $hort']\n",
+    "]\n",
+    "#la modularidad nos permite enconrar aquellos nodos que tienen una conexion muy fuerte con sus vecinos, \n",
+    "#y el algoritmo Hierarchical clustering nos permite encontrar esas 8 comunidades.\n"
+   ]
   }
  ],
  "metadata": {
