update parte comunidades

--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -374,8 +374,16 @@ Podemos observar que se han detectado 7 comunidades, que para representarlas en 
 	\label{fig:gephiModularity}
 \end{figure}
 
+\paragraph*{En la Figura~\ref{fig:gephi_bonito} se pueden ver las 2 comunidades mas influntes
+ en morado con un 26,23\% artistas como Young Buck, 50 Cent, Tony Yayo, The Game, Jeremih, Michael Jackson, LL Cool J...;
+ y en verde claro con un 22,95\% artistas como Snoop Dogg, Alicia Keys, Trey Songz, Adam Levine... }
 
-
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=120mm]{gephi_grafo_bonito.png}
+    \caption{Gephi grafo versión grande}\label{fig:gephi_bonito}
+\end{figure}
+\pagebreak
 
 \section{Conclusiones}
 
