--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -338,13 +338,13 @@ haga la conversion a CSV y luego eso lo importaríamos en Gephi.}
 	\item \textbf{Le damos siguiente a todo y no olvidemos al acabar de añadir las aristas al espacio de trabajo existente.}
 \end{enumerate}
 
-\paragraph*{A continuación en el panel de estadísticas ejecutaremos el algoritmo de Modularidad que nos dará las estadísticas.Figura~\ref{fig:gephiModularity}. 
-Podemos observar que se han detectado 7 comunidades, que para representarlas en el grafo y poder verlas visualmente tenemos que configurar los siguientes elementos:}
+\paragraph*{A continuación en el panel de estadísticas ejecutaremos el algoritmo de Modularidad que nos dará las estadísticas. 
+Podemos observar que se han detectado 7 comunidades, que para representarlas en el grafo y poder verlas visualmente tenemos que configurar los siguientes elementos: [Figura~\ref{fig:gephiModularity}].}
 \begin{enumerate}
-	\item \textbf{Apariencia(icono de la paleta de colores), nodos, particion y seleccionamos Modularity Class. De esta forma los nodos se colorearan del color correspondiente a su comunidad.Figura~\ref{fig:gephiModularity}.}
-	\item \textbf{Apariencia(icono del tamaño), ranking, Betweenness Centrality. Para que el tamaño de los nodos represente la centralidad de cercanía.Figura~\ref{fig:gephiModularity}.}
+	\item \textbf{Apariencia(icono de la paleta de colores), nodos, particion y seleccionamos Modularity Class. De esta forma los nodos se colorearan del color correspondiente a su comunidad.}
+	\item \textbf{Apariencia(icono del tamaño), ranking, Betweenness Centrality. Para que el tamaño de los nodos represente la centralidad de cercanía..}
 	\item \textbf{En distribución, seleccionamos Force Atlas y ajustamos la fuerza de repulsión en 100000.0 y marcamos ajustar por tamaños.}
-	\item \textbf{Obtenemos este grafo. Figura~\ref{fig:gephiModularity}.}
+	\item \textbf{Obtenemos este grafo. }
 \end{enumerate}
 
 \begin{figure}[H]
@@ -374,13 +374,12 @@ Podemos observar que se han detectado 7 comunidades, que para representarlas en 
 	\label{fig:gephiModularity}
 \end{figure}
 
-\paragraph*{En la Figura~\ref{fig:gephi_bonito} se pueden ver las 2 comunidades mas influntes
- en morado con un 26,23\% artistas como Young Buck, 50 Cent, Tony Yayo, The Game, Jeremih, Michael Jackson, LL Cool J...;
- y en verde claro con un 22,95\% artistas como Snoop Dogg, Alicia Keys, Trey Songz, Adam Levine... }
+\paragraph*{Si utilizamos la pestaña de previsualización obtendremos la Figura~\ref{fig:gephi_bonito} y podremos ver las 7 comunidades un poco más de cerca. 
+Dónde los nodos más grandes representan una centralidad de cercania mayor, que a su vez coinciden con el ranking de popularidad de cada artista.}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=120mm]{gephi_grafo_bonito.png}
+    \includegraphics[width=150mm]{gephi_grafo_bonito.png}
     \caption{Gephi grafo versión grande}\label{fig:gephi_bonito}
 \end{figure}
 \pagebreak
